Configuração da lib tsyringe para o gerenciamento de dependências, refatoração dos use cases de criação de categoria e especificação; criação da tabela de especificação no banco de dados; detalhamento da documentação para a criação de especificação e upload de arquivos .csv
