# src/routes/specifications.routes.ts
@@ -1,11 +1,10 @@
 import { Router } from 'express';
-import { createSpecificationController } from '../modules/cars/useCases/createSpecification';
+import { CreateSpecificationController } from '../modules/cars/useCases/createSpecification/CreateSpecificationController';
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post('/', (req, res) => {
-  return createSpecificationController.handle(req, res);
-});
+const createSpecificationController = new CreateSpecificationController();
 
-// eslint-disable-next-line import/prefer-default-export
+specificationsRoutes.post('/', createSpecificationController.handle);
+
 export { specificationsRoutes };
